added host_groups, modified hosts, maps endpoints
